Todays work - cannot extend properties for login form... to be fair... a wtf form may not be best and I sculpture form myself?

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}
-About Us
+GF Software Ticketing | About Us
 {% endblock %}
 {% block content %}
-<p>About page for the Visual Studio Code Flask tutorial.</p>
+<p>About page for the GF Software Ticketing.</p>
 {% endblock %}
