--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -13,10 +13,9 @@
         <div class="navbar-header"> <button type="button" class="navbar-toggle" data-toggle="collapse"
                 data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span> <span
                     class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a
-                class="navbar-brand" href="/">GF Software Ticketing</a> </div>
+                class="navbar-brand" href="{{ url_for('main.home') }}">GF Software Ticketing</a> </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
                 <li><a href="{{ url_for('main.about') }}" class="navbar-item">About</a></li>
             </ul>
         </div>
