--- a/app/templates/requestAccount.html
+++ b/app/templates/requestAccount.html
@@ -6,5 +6,8 @@ GF Software Ticketing | Request Account
 {% endblock %}
 
 {% block page_content %}
+<h1>Request Account:</h1><br>
 {{ wtf.quick_form(form) }} 
+<br>
+<a href="{{ url_for('main.login') }}" class="navbar-item">Back to Login</a>
 {% endblock %}
