Flask login initial setup? (Unfinished)

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -17,6 +17,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('main.about') }}" class="navbar-item">About</a></li>
+                <!-- <li><a href="{{ url_for('main.login') }}" class="navbar-item">Login</a></li> -->
             </ul>
         </div>
     </div>
