Request Software form working

--- a/app/templates/createRequest.html
+++ b/app/templates/createRequest.html
@@ -7,4 +7,6 @@ GF Software Ticketing | Create Request
 
 {% block page_content %}
 <h1>Create Request:</h1><br>
+
+{{ wtf.quick_form(form) }}
 {% endblock %}
