--- a/app/templates/requestDetails.html
+++ b/app/templates/requestDetails.html
@@ -48,7 +48,13 @@ GF Software Ticketing | Request Details
 
     {% if request.RequestAccepted is none and requestUser.id == current_user.id %}
     <button type="submit" class="btn btn-primary">Update Request</button>
+    <button type="submit" class="btn btn-danger">Delete Request</button>
     {% endif %}
 
+
+    {% if request.RequestAccepted is none and current_user.RoleID == 2 %}
+    <button type="submit" class="btn btn-success" style="float: right; margin-left: 5px;">Accept</button> 
+    <button type="submit" class="btn btn-danger" style="float: right;">Reject</button> 
+    {% endif %}
   </form> 
 {% endblock %}
