--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -33,9 +33,14 @@
 
 {% block content %} 
 <div class="container">
-    {% for message in get_flashed_messages() %} 
-    <div class="alert alert-warning"> <button type="button" class="close" data-dismiss="alert">&times;</button> {{ message }} </div> 
-    {% endfor %}
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        {% for category, message in messages %}
+        <div class="alert alert-{{ category }}"> <button type="button" class="close" data-dismiss="alert">&times;</button> {{ message }} </div> 
+        {% endfor %}
+    {% endif %}
+    {% endwith %}
+
     {% block page_content %}
 
     {% endblock %}
