Textareas can now no longer be resized out of the form, request details should now be complete.

--- a/app/templates/requestDetails.html
+++ b/app/templates/requestDetails.html
@@ -28,12 +28,12 @@ GF Software Ticketing | Request Details
 
     <div class="form-group">
       <label for="{{ form.details.id }}">Request Details:</label>
-      {{ form.details(class_='form form-control', disabled=disabledField) }}
+      {{ form.details(class_='form form-control', disabled=disabledField, style='resize: vertical;') }}
     </div>
 
     <div class="form-group">
       <label for="{{ form.impact.id }}">Request Impact:</label>
-      {{ form.impact(class_='form form-control', disabled=disabledField) }}
+      {{ form.impact(class_='form form-control', disabled=disabledField, style='resize: vertical;') }}
     </div>
 
     <div class="form-group">
