--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,12 +17,15 @@
             {% endif %}
         
         </div>
-        <div class="col-md-3"><h3 style="display: inline;">Select status:</h3> &nbsp; <select>
-
-            <option value="Pending">Pending</option>
-            <option value="Accepted">Accepted</option>
-            <option value="Rejected">Rejected</option>
-        </Select></div>
+        <div class="col-md-3"><h3 style="display: inline;">Select status:</h3> &nbsp; 
+            
+            <select name="status" id="status" onchange="location = this.value;">
+                <option value="{{ url_for('main.home') }}">Pending</option>
+                <option value="{{ url_for('main.home', status='accepted') }}">Accepted</option>
+                <option value="{{ url_for('main.home', status='rejected') }}">Rejected</option>
+              </select>
+     
+    </div>
     </div>
       <br>
     <div>
