--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,9 +20,9 @@
         <div class="col-md-3"><h3 style="display: inline;">Select status:</h3> &nbsp; 
             
             <select name="status" id="status" onchange="location = this.value;">
-                <option value="{{ url_for('main.home') }}">Pending</option>
-                <option value="{{ url_for('main.home', status='1') }}">Accepted</option>
-                <option value="{{ url_for('main.home', status='0') }}">Rejected</option>
+                <option value="{{ url_for('main.home') }}" {% if not status %} selected {% endif %}>Pending</option>
+                <option value="{{ url_for('main.home', status='1') }}" {% if status == '1' %} selected {% endif %}>Accepted</option>
+                <option value="{{ url_for('main.home', status='0') }}" {% if status == '0' %} selected {% endif %}>Rejected</option>
               </select>
      
     </div>
@@ -36,7 +36,10 @@
             </thead>
             <tbody>
                 {% for request in requests %}
-                <tr>
+                <tr  {% if not status %} style="background-color: #ffff99;" 
+                {% elif status == '1' %} style="background-color: #7CF3AC;"
+                {% elif status == '0' %} style="background-color: #F1AFBB;"
+                {% endif %}>
                     <td><a href="{{ url_for('main.requestDetails', requestID=request.RequestID) }}">{{ request.RequestTitle }}</a></td>
                     <td>{{request.RequestDetails}}</td>
                 </tr>
