Removed unecessary comments and TMI errors.

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,8 +1,8 @@
-<!-- This is basically layout, however extending from the default bootstrap base-->
+
 {% extends "bootstrap/base.html" %} 
 
 {% block head %}
-{{ super() }} <!-- stops override of boostrap head block with bootstrap css/js refs, put any script/css refs here-->
+{{ super() }} 
 
 {% endblock %}
 
